--- a/EgitimPlatformuAI/CustomViews/CustomNameContainer/CustomNameContainerView.xib
+++ b/EgitimPlatformuAI/CustomViews/CustomNameContainer/CustomNameContainerView.xib
@@ -3,7 +3,7 @@
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="23506"/>
-        <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -11,7 +11,6 @@
             <connections>
                 <outlet property="imageView" destination="L5M-bK-GFP" id="JmQ-4A-9SH"/>
                 <outlet property="nameLabel" destination="4rN-vp-yWD" id="lTU-U0-lLr"/>
-                <outlet property="statusLabel" destination="SrX-Fw-tSl" id="0Y8-gw-4fb"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
@@ -21,6 +20,7 @@
             <subviews>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="L5M-bK-GFP">
                     <rect key="frame" x="20" y="20" width="40" height="40"/>
+                    <color key="tintColor" name="porcelain"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="40" id="3NK-Of-ukf"/>
                         <constraint firstAttribute="height" constant="40" id="CeC-NE-WAh"/>
@@ -30,21 +30,15 @@
                     <rect key="frame" x="70" y="15" width="323" height="50"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="95m-fs-raK">
-                            <rect key="frame" x="0.0" y="0.0" width="323" height="16.666666666666668"/>
+                            <rect key="frame" x="0.0" y="0.0" width="323" height="25"/>
                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                            <nil key="textColor"/>
+                            <color key="textColor" name="porcelain"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4rN-vp-yWD">
-                            <rect key="frame" x="0.0" y="16.666666666666664" width="323" height="16.666666666666664"/>
+                            <rect key="frame" x="0.0" y="25" width="323" height="25"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                            <nil key="textColor"/>
-                            <nil key="highlightedColor"/>
-                        </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SrX-Fw-tSl">
-                            <rect key="frame" x="0.0" y="33.333333333333336" width="323" height="16.666666666666664"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                            <color key="textColor" systemColor="systemGreenColor"/>
+                            <color key="textColor" name="porcelain"/>
                             <nil key="highlightedColor"/>
                         </label>
                     </subviews>
@@ -53,7 +47,7 @@
                     </constraints>
                 </stackView>
             </subviews>
-            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+            <color key="backgroundColor" name="darkBlue"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="pTR-6V-eTq" secondAttribute="trailing" id="09V-Ga-lEA"/>
                 <constraint firstItem="pTR-6V-eTq" firstAttribute="leading" secondItem="L5M-bK-GFP" secondAttribute="trailing" constant="10" id="B3m-fI-jcG"/>
@@ -67,11 +61,11 @@
         </view>
     </objects>
     <resources>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGreenColor">
-            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
+        <namedColor name="darkBlue">
+            <color red="0.11764705882352941" green="0.13725490196078433" blue="0.17254901960784313" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="porcelain">
+            <color red="0.96862745098039216" green="0.97254901960784312" blue="0.97647058823529409" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
